# rust-kube-fun

./: Cargo.toml  README.md
src/: main.rs
src/lib/: list.rs  mod.rs  pods.rs  services.rs
