[package]
name = "rust-kube-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"]}
kube = { version = "0.83.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"]}
axum = "0.6.18"

